sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: not found: value echanger
        echanger(i+ecart,i);
        ^